--- a/aboutus.html
+++ b/aboutus.html
@@ -79,9 +79,9 @@
       <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
           <div style="font-size:14px; color:#fff;  font-weight:bold;">关于飞肯新材</div>
       </li>
-      <li>
-          <a href="aboutus.html"><span>公司简介</span></a>
-      </li>      
+      <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+        <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="aboutus.html"><span>公司简介</span></a></div>
+      </li>
             
       <li>
           <a href="jobs.html"><span>招才纳贤</span></a>
