--- a/catalyst3.html
+++ b/catalyst3.html
@@ -82,32 +82,20 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./catalyst.html">催化剂行业</a></div>
+        </li> 
+		    <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./catalyst3.html">VCM的合成</a></div>
         </li> 
         <li>
-            <a href="./food1.html">蔗糖脱色</a>
+          <a href="./catalyst1.html">PU领域催化</a>
         </li>       
         <li>
-            <a href="./food2.html">淀粉糖的脱色</a>
-        </li>   
-        <li>
-            <a href="./food3.html">食用油中脱除PAH</a>
-        </li>       
-        <li>
-            <a href="./food4.html">果汁的纯化</a>
+          <a href="./catalyst2.html">三聚氯氰的合成</a>
         </li>  
         <li>
-            <a href="./food5.html">酒类的除杂</a>
-        </li>       
-        <li>
-            <a href="./food6.html">乳酸，乳糖的脱色</a>
-        </li>  
-        <li>
-            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
-        </li>       
-        <li>
-            <a href="./food8.html">植物炭黑</a>
-        </li>  		
+          <a href="./catalyst4.html">加氢催化剂</a>
+        </li>    
       </ul> 
     </div>  
 
@@ -117,73 +105,26 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 食品行业
+            当前位置:首页 >> 应用导航 >> 催化剂行业
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在食品行业的应用 :</strong>
-            <br>
-            <ul class="productapp">
-              <li>
-                <a href="./food1.html" >
-                  <img src="./image/food1.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food1.html">蔗糖脱色</a>
-              </li>
-              <li>
-                <a href="./food2.html" >
-                  <img src="./image/food2.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food2.html">淀粉糖的脱色</a>
-              </li>
-			  <li>
-                <a href="./food3.html" >
-                  <img src="./image/food3.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food3.html">食用油中脱除PAH</a>
-              </li>
-			  <li>
-                <a href="./food4.html" >
-                  <img src="./image/food4.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food4.html">果汁的纯化</a>
-              </li>
-			  <li>
-                <a href="./food5.html" >
-                  <img src="./image/food5.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food5.html">酒类的除杂</a>
-              </li>
-			  <li>
-                <a href="./food6.html" >
-                  <img src="./image/food6.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food6.html">乳酸，乳糖的脱色</a>
-              </li>
-			        <li>
-                <a href="./food7.html" >
-                  <img src="./image/food7.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food7.html">咖啡或茶中脱除咖啡因</a>
-              </li>
-			        <li>
-                <a href="./food8.html" >
-                  <img src="./image/food8.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food8.html">植物炭黑</a>
-              </li>
-            </ul>
-            <p class="clear"></p>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">VCM的合成  VCM synthesis</h2> 
+            <div style="text-align:center;">
+              <img src="./image/catalyst3-0.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">氯乙烯又名乙烯基氯，是一种应用于高分子化工的重要的单体，主要用于制造PVC树脂，市场用途巨大，可用于大口径管材、家用耐热制品(如车防锈涂料/计算机外壳/护墙板/窗型材)、纤维增强制品(如管材/机箱等阻燃pvc制品)以及用于包装的硬片膜制品等。
+            </p>
+            <p style="text-indent: 2em;">氯乙烯的生成有乙烯法和乙炔法，而国内煤化工行业发达，一般多采用乙炔法，起始原料为电石（CaC2），经过水解后得到乙炔，再与氯化氢在催化剂的作用下反应得到氯乙烯。传统的催化剂为Hg/C，但由于Hg有剧毒，为国家严格限定排放产品，于2025年将面临禁止使用。
+            </p>
+            <div style="text-align:center;">
+              <img src="./image/catalyst3-1.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">目前国内多采用含金合金催化剂和贱金属合金催化剂，大部分使用柱状碳，也有少部分应用颗粒碳，要求催化剂的转化效率能在7800h的使用时间内保持稳定，因此对碳的强度及孔径分布也有较高要求。由于氯乙烯含烯烃，而碳本身也是非常好的催化剂，一旦碳材料有许多酸性位点，将会很容易导致聚合，从而导致孔径堵塞，影响催化剂活性及寿命。而VCM属于小分子，一般蛋白型催化剂载体较为适合这种类型催化，因此在使用前需要对活性炭进行改性处理，便于形成蛋白型催化剂。
+            </p>        
 
+            <p class="clear"></p>
+            <br>
           </div>
 
       </div>    
