--- a/contactus.html
+++ b/contactus.html
@@ -79,6 +79,9 @@
       <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
           <div style="font-size:14px; color:#fff;  font-weight:bold;">关于飞肯新材</div>
       </li>
+      <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+        <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./contactus.html"><span>联系我们</span></a></div>
+      </li> 
       <li>
           <a href="./aboutus.html"><span>公司简介</span></a>
       </li>      
@@ -89,10 +92,6 @@
             
       <li>
           <a href="./feedback.html"><span>在线留言</span></a>
-      </li>  
-            
-      <li>
-          <a href="./contactus.html"><span>联系我们</span></a>
       </li>  
     </ul>
   </div>
