--- a/gas1.html
+++ b/gas1.html
@@ -82,35 +82,50 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./gas.html">气体行业</a></div>
         </li> 
-		<li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"></div>
-        </li> 
+		    <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./gas1.html">果蔬储存</a></div>
+        </li>        
         <li>
-            <a href="./food1.html">蔗糖脱色</a>
-        </li>       
-        <li>
-            <a href="./food2.html">淀粉糖的脱色</a>
-        </li>   
-        <li>
-            <a href="./food3.html">食用油中脱除PAH</a>
-        </li>       
-        <li>
-            <a href="./food4.html">果汁的纯化</a>
+          <a href="./gas2.html">油气回收</a>
         </li>  
         <li>
-            <a href="./food5.html">酒类的除杂</a>
+          <a href="./gas3.html">溶剂回收</a>
         </li>       
         <li>
-            <a href="./food6.html">乳酸，乳糖的脱色</a>
+          <a href="./gas4.html">VOC尾气脱除</a>
         </li>  
         <li>
-            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
+          <a href="./gas5.html">啤酒发酵中二氧化碳的净化</a>
         </li>       
         <li>
-            <a href="./food8.html">植物炭黑</a>
-        </li>  		
+          <a href="./gas6.html">香烟过滤嘴中的气体净化</a>
+        </li>  
+        <li>
+          <a href="./gas7.html">天然气脱汞</a>
+        </li>       
+        <li>
+          <a href="./gas8.html">沼气脱H2S及硅氧烷</a>
+        </li>  
+        <li>
+          <a href="./gas9.html">烟气脱硫脱硝</a>
+        </li>       
+        <li>
+          <a href="./gas10.html">垃圾焚烧尾气中脱除二噁英</a>
+        </li>  
+        <li>
+          <a href="./gas11.html">PSA</a>
+        </li>       
+        <li>
+          <a href="./gas12.html">家用空气净化</a>
+        </li>   	
+        <li>
+          <a href="./gas13.html">汽车碳罐</a>
+        </li>       
+        <li>
+          <a href="./gas14.html">防毒面具及口罩</a>
+        </li>  	
       </ul> 
     </div>  
 
@@ -120,23 +135,18 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 食品行业
+            当前位置:首页 >> 应用导航 >> 气体行业
           </div>
 
           <div class="conNeiText">  
-            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;"></h2> 
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">果蔬储存 Storage of fruit and vegetable</h2> 
             <div style="text-align:center;">
-              <img src="./image/food1-0.jpg" style="width: 80%;">
+              <img src="./image/gas1-0.jpg" style="width: 60%;">
             </div>
-            <p style="text-indent: 2em;"></p>
-            <p style="text-indent: 2em;"></p>
-            <p style="text-indent: 2em;"></p>
-            <p style="text-indent: 2em;"></p>
-            <p style="text-indent: 2em;"></p>
-			
-            <div style="text-align:center;">
-              <img src="./image/food1-1.jpg" style="width: 80%;">
-            </div>
+            <p style="text-indent: 2em;">乙烯作为催熟剂，在果蔬储藏环境中即使存在浓度较低，也会引发果蔬成熟老化。所以在果蔬采收后1-5天内，需要使用乙烯脱除剂来吸附环境中的乙烯。活性炭作为吸附剂，在使用时通常会分装成许多独立的小包装放置于果蔬的中层和上层。
+            </p>
+            <p style="text-indent: 2em;">在气调贮藏过程中，因果蔬呼吸而放出的二氧化碳会使库内的二氧化碳浓度逐渐升高，当二氧化碳浓度过高，将导致果蔬产品二氧化碳中毒，产生一系列不良症状，最终使之腐烂变质，因此，高效的二氧化碳脱除设备是气调库必备设备。活性炭是此类设备常见的吸附剂，用来吸附固定CO2；采用一定的方式可以让CO2从活性炭表面解析，实现CO2的回收利用。
+            </p>
             <p class="clear"></p>
             <br>
           </div>
