--- a/gas13.html
+++ b/gas13.html
@@ -82,32 +82,50 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./gas.html">气体行业</a></div>
+        </li> 
+		    <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./gas13.html">汽车碳罐</a></div>
         </li> 
         <li>
-            <a href="./food1.html">蔗糖脱色</a>
+          <a href="./gas1.html">果蔬储存</a>
         </li>       
         <li>
-            <a href="./food2.html">淀粉糖的脱色</a>
-        </li>   
-        <li>
-            <a href="./food3.html">食用油中脱除PAH</a>
-        </li>       
-        <li>
-            <a href="./food4.html">果汁的纯化</a>
+          <a href="./gas2.html">油气回收</a>
         </li>  
         <li>
-            <a href="./food5.html">酒类的除杂</a>
+          <a href="./gas3.html">溶剂回收</a>
         </li>       
         <li>
-            <a href="./food6.html">乳酸，乳糖的脱色</a>
+          <a href="./gas4.html">VOC尾气脱除</a>
         </li>  
         <li>
-            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
+          <a href="./gas5.html">啤酒发酵中二氧化碳的净化</a>
         </li>       
         <li>
-            <a href="./food8.html">植物炭黑</a>
-        </li>  		
+          <a href="./gas6.html">香烟过滤嘴中的气体净化</a>
+        </li>  
+        <li>
+          <a href="./gas7.html">天然气脱汞</a>
+        </li>       
+        <li>
+          <a href="./gas8.html">沼气脱H2S及硅氧烷</a>
+        </li>  
+        <li>
+          <a href="./gas9.html">烟气脱硫脱硝</a>
+        </li>       
+        <li>
+          <a href="./gas10.html">垃圾焚烧尾气中脱除二噁英</a>
+        </li>  
+        <li>
+          <a href="./gas11.html">PSA</a>
+        </li>       
+        <li>
+          <a href="./gas12.html">家用空气净化</a>
+        </li>   	      
+        <li>
+          <a href="./gas14.html">防毒面具及口罩</a>
+        </li>  	
       </ul> 
     </div>  
 
@@ -117,73 +135,23 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 食品行业
+            当前位置:首页 >> 应用导航 >> 气体行业
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在食品行业的应用 :</strong>
-            <br>
-            <ul class="productapp">
-              <li>
-                <a href="./food1.html" >
-                  <img src="./image/food1.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food1.html">蔗糖脱色</a>
-              </li>
-              <li>
-                <a href="./food2.html" >
-                  <img src="./image/food2.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food2.html">淀粉糖的脱色</a>
-              </li>
-			  <li>
-                <a href="./food3.html" >
-                  <img src="./image/food3.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food3.html">食用油中脱除PAH</a>
-              </li>
-			  <li>
-                <a href="./food4.html" >
-                  <img src="./image/food4.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food4.html">果汁的纯化</a>
-              </li>
-			  <li>
-                <a href="./food5.html" >
-                  <img src="./image/food5.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food5.html">酒类的除杂</a>
-              </li>
-			  <li>
-                <a href="./food6.html" >
-                  <img src="./image/food6.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food6.html">乳酸，乳糖的脱色</a>
-              </li>
-			        <li>
-                <a href="./food7.html" >
-                  <img src="./image/food7.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food7.html">咖啡或茶中脱除咖啡因</a>
-              </li>
-			        <li>
-                <a href="./food8.html" >
-                  <img src="./image/food8.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food8.html">植物炭黑</a>
-              </li>
-            </ul>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">汽车碳罐 Car carbon canisters</h2> 
+            <div style="text-align:center;">
+              <img src="./image/gas13-0.jpg" style="width: 60%;">
+            </div>
+            <p style="text-indent: 2em;">碳罐即一个填充了活性炭的罐子，用于收集汽油蒸汽并二次利用的装置，一般装在汽油箱和发动机之间。由于汽油是一种易挥发的液体，在常温下燃油箱经常充满蒸气，最早人们将油箱盖做成泄压阀形式，当油箱内压力超过一定值后泄压阀打开，汽油蒸汽被直接排放到空气中，后来为节约汽油，人们设计了汽油蒸发控制系统（EVAP），其作用是将蒸气引入燃烧并防止挥发到大气中，这个过程起重要作用的是活性碳罐贮存装置。
+            </p>
+            <div style="text-align:center;">
+              <img src="./image/gas13-1.jpg" style="width: 30%;">
+            </div>
+            <p style="text-indent: 2em;">碳罐内部一般由丁烷吸附力极强的柱状活性炭填充，油箱中多余的燃油蒸汽不再排到大气中，而是有一根管子引入活性碳罐。发动机熄火后，汽油自然挥发形成汽油蒸汽，通过管道进入碳罐挥发区并立即被活性碳吸附冷凝为汽油；当发动机启动后，装在活性碳罐与进气歧管之间的电磁阀门打开，活性碳罐内的汽油在进气管的真空度作用下，被洁净空气带入气缸内参加燃烧，此时活性炭因为发动机的抽吸作用得到还原。
+            </p>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
