--- a/gas2.html
+++ b/gas2.html
@@ -82,32 +82,50 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./gas.html">气体行业</a></div>
+        </li> 
+		    <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./gas2.html">油气回收</a></div>
         </li> 
         <li>
-            <a href="./food1.html">蔗糖脱色</a>
+          <a href="./gas1.html">果蔬储存</a>
         </li>       
         <li>
-            <a href="./food2.html">淀粉糖的脱色</a>
-        </li>   
-        <li>
-            <a href="./food3.html">食用油中脱除PAH</a>
+          <a href="./gas3.html">溶剂回收</a>
         </li>       
         <li>
-            <a href="./food4.html">果汁的纯化</a>
+          <a href="./gas4.html">VOC尾气脱除</a>
         </li>  
         <li>
-            <a href="./food5.html">酒类的除杂</a>
+          <a href="./gas5.html">啤酒发酵中二氧化碳的净化</a>
         </li>       
         <li>
-            <a href="./food6.html">乳酸，乳糖的脱色</a>
+          <a href="./gas6.html">香烟过滤嘴中的气体净化</a>
         </li>  
         <li>
-            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
+          <a href="./gas7.html">天然气脱汞</a>
         </li>       
         <li>
-            <a href="./food8.html">植物炭黑</a>
-        </li>  		
+          <a href="./gas8.html">沼气脱H2S及硅氧烷</a>
+        </li>  
+        <li>
+          <a href="./gas9.html">烟气脱硫脱硝</a>
+        </li>       
+        <li>
+          <a href="./gas10.html">垃圾焚烧尾气中脱除二噁英</a>
+        </li>  
+        <li>
+          <a href="./gas11.html">PSA</a>
+        </li>       
+        <li>
+          <a href="./gas12.html">家用空气净化</a>
+        </li>   	
+        <li>
+          <a href="./gas13.html">汽车碳罐</a>
+        </li>       
+        <li>
+          <a href="./gas14.html">防毒面具及口罩</a>
+        </li>  	
       </ul> 
     </div>  
 
@@ -117,73 +135,37 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 食品行业
+            当前位置:首页 >> 应用导航 >> 气体行业
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在食品行业的应用 :</strong>
-            <br>
-            <ul class="productapp">
-              <li>
-                <a href="./food1.html" >
-                  <img src="./image/food1.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food1.html">蔗糖脱色</a>
-              </li>
-              <li>
-                <a href="./food2.html" >
-                  <img src="./image/food2.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food2.html">淀粉糖的脱色</a>
-              </li>
-			  <li>
-                <a href="./food3.html" >
-                  <img src="./image/food3.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food3.html">食用油中脱除PAH</a>
-              </li>
-			  <li>
-                <a href="./food4.html" >
-                  <img src="./image/food4.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food4.html">果汁的纯化</a>
-              </li>
-			  <li>
-                <a href="./food5.html" >
-                  <img src="./image/food5.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food5.html">酒类的除杂</a>
-              </li>
-			  <li>
-                <a href="./food6.html" >
-                  <img src="./image/food6.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food6.html">乳酸，乳糖的脱色</a>
-              </li>
-			        <li>
-                <a href="./food7.html" >
-                  <img src="./image/food7.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food7.html">咖啡或茶中脱除咖啡因</a>
-              </li>
-			        <li>
-                <a href="./food8.html" >
-                  <img src="./image/food8.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food8.html">植物炭黑</a>
-              </li>
-            </ul>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">油气回收 Oil gas recovery</h2> 
+            <div style="text-align:center;">
+              <img src="./image/gas2-0.jpg" style="width: 60%;">
+            </div>
+            <p style="text-indent: 2em;">加油站油气回收主要有一次、二次、三次油气回收，是指在装卸汽油和给车辆加油的过程中，将挥发的汽油油气收集起来，通过吸收、吸附或冷凝等工艺，使油气从气态转变为液态重新变为汽油的过程。
+            </p>
+            <p style="text-indent: 2em;">一次回收是油罐车卸油的时候，在实施了油气污染回收治理的加油站，地下油罐多了一个管口，在卸油时，这个管口连接油罐车油气回收管，油气就会被抽到油罐车内。
+            </p>
+            <p style="text-indent: 2em;">二次回收发生在给汽车加油的时候。加油机内部安装了一台油气回收真空泵及油气回收管道。看加油枪底部安装的像口罩的一个套子，这个是回气罩。在给汽车加油时，回气罩正好将油箱口扣上，可防止油箱内的油气向外溢出。同时，在枪管根部还有一圈小孔，是油气回收孔。加油时，真空泵将油箱中的油气通过回收孔抽回到地下油罐中。
+            </p>
+            <p style="text-indent: 2em;">这两次回收，油气将被带回油库进行统一集中处理。
+            </p>
+            <p style="text-indent: 2em;">而三次油气回收是指一个加油站汽油年销售量达到8000吨以上的话，需要安装一台冷凝设备，采取低温、低压的方式在加油站将油气直接冷凝成汽油回到油罐。这样一来，三次油气回收不仅大大减少了排入大气环境中的有害物质，具有改善环境空气质量的生态效益，还能将油气再利用，带来一定的经济效益。
+            </p>
+            <p style="text-indent: 2em;">活性炭吸附法是油气回收的主要工艺之一，上世纪70年代在美国开始应用，现已在世界范围内广泛使用，该流程相对简单并且回收效率很高，其原理是利用油气混合物中各组分与吸附剂(活性炭)之间结合力强弱的差别，使混合物中难吸附与易吸附组分分离，其中的烃类被吸附剂吸附。吸附过程在常温常压下进行，吸附剂达到一定的饱和度后，需进行再生，再生过程中脱附出的油气再用油品进行吸收，即回收过程分三步进行： 
+            </p>
+            <p style="text-indent: 2em;">第一步吸附，从公路运输槽车加油区密闭收集油气，经管道低压输入吸附塔内，油气中约 99％的油蒸气被塔内的活性炭吸附，空气等其他气体排入大气。吸附过程不发生化学反应 。 
+            </p>
+            <p style="text-indent: 2em;">第二步脱附，当吸附剂吸附饱和(或基本饱和)之后，开启干式真空泵及压缩机，用真空法对吸附塔内的活性炭床进行脱附，获得高浓度的油蒸气，油蒸气经压缩送入吸收塔，经过脱附的活性炭恢复原有功能，具备执行下一次油气吸附能力 。
+            </p>
+            <p style="text-indent: 2em;">第三步吸收，油蒸气进入吸收塔后， 在填料层与汽油吸收剂进行逆向流动，绝大部分油蒸气被喷淋塔内的汽油 (来自于储油罐) 溶解吸收，变为液态汽油，少量未被溶解的油蒸气， 经管道送入吸附塔内再次进行吸附。
+            </p>
+            <div style="text-align:center;">
+              <img src="./image/gas2-1.jpg" style="width: 80%;">
+            </div>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
