--- a/gas3.html
+++ b/gas3.html
@@ -82,32 +82,50 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./gas.html">气体行业</a></div>
+        </li> 
+		    <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./gas3.html">溶剂回收</a></div>
         </li> 
         <li>
-            <a href="./food1.html">蔗糖脱色</a>
+          <a href="./gas1.html">果蔬储存</a>
         </li>       
         <li>
-            <a href="./food2.html">淀粉糖的脱色</a>
-        </li>   
-        <li>
-            <a href="./food3.html">食用油中脱除PAH</a>
-        </li>       
-        <li>
-            <a href="./food4.html">果汁的纯化</a>
+          <a href="./gas2.html">油气回收</a>
         </li>  
         <li>
-            <a href="./food5.html">酒类的除杂</a>
-        </li>       
-        <li>
-            <a href="./food6.html">乳酸，乳糖的脱色</a>
+          <a href="./gas4.html">VOC尾气脱除</a>
         </li>  
         <li>
-            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
+          <a href="./gas5.html">啤酒发酵中二氧化碳的净化</a>
         </li>       
         <li>
-            <a href="./food8.html">植物炭黑</a>
-        </li>  		
+          <a href="./gas6.html">香烟过滤嘴中的气体净化</a>
+        </li>  
+        <li>
+          <a href="./gas7.html">天然气脱汞</a>
+        </li>       
+        <li>
+          <a href="./gas8.html">沼气脱H2S及硅氧烷</a>
+        </li>  
+        <li>
+          <a href="./gas9.html">烟气脱硫脱硝</a>
+        </li>       
+        <li>
+          <a href="./gas10.html">垃圾焚烧尾气中脱除二噁英</a>
+        </li>  
+        <li>
+          <a href="./gas11.html">PSA</a>
+        </li>       
+        <li>
+          <a href="./gas12.html">家用空气净化</a>
+        </li>   	
+        <li>
+          <a href="./gas13.html">汽车碳罐</a>
+        </li>       
+        <li>
+          <a href="./gas14.html">防毒面具及口罩</a>
+        </li>  	
       </ul> 
     </div>  
 
@@ -117,73 +135,28 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 食品行业
+            当前位置:首页 >> 应用导航 >> 气体行业
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在食品行业的应用 :</strong>
-            <br>
-            <ul class="productapp">
-              <li>
-                <a href="./food1.html" >
-                  <img src="./image/food1.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food1.html">蔗糖脱色</a>
-              </li>
-              <li>
-                <a href="./food2.html" >
-                  <img src="./image/food2.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food2.html">淀粉糖的脱色</a>
-              </li>
-			  <li>
-                <a href="./food3.html" >
-                  <img src="./image/food3.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food3.html">食用油中脱除PAH</a>
-              </li>
-			  <li>
-                <a href="./food4.html" >
-                  <img src="./image/food4.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food4.html">果汁的纯化</a>
-              </li>
-			  <li>
-                <a href="./food5.html" >
-                  <img src="./image/food5.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food5.html">酒类的除杂</a>
-              </li>
-			  <li>
-                <a href="./food6.html" >
-                  <img src="./image/food6.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food6.html">乳酸，乳糖的脱色</a>
-              </li>
-			        <li>
-                <a href="./food7.html" >
-                  <img src="./image/food7.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food7.html">咖啡或茶中脱除咖啡因</a>
-              </li>
-			        <li>
-                <a href="./food8.html" >
-                  <img src="./image/food8.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food8.html">植物炭黑</a>
-              </li>
-            </ul>
-            <p class="clear"></p>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">c.	溶剂回收 Solvent recovery</h2> 
+            <div style="text-align:center;">
+              <img src="./image/gas3-0.jpg" style="width: 60%;">
+            </div>
+            <p style="text-indent: 2em;">在工业生产中，最常用的溶剂即有机溶剂，除广泛用于清洗、去污、稀释和萃取等过程外，很多有机溶剂也作为中间体用于化学合成。常用的溶剂有石油醚、甲苯、乙酸乙酯、甲基叔丁基醚、二氯甲烷、醇类、二硫化碳、丙酮等。有机溶剂使用广泛而且用量巨大，如果只是一次性使用，将会造成资源浪费和环境的破坏，因此需要对溶剂进行回收以循环利用，目前溶剂回收主要有如下几种方式，如活性炭吸附法、吸收法、冷凝法和膜分离法。其中活性炭吸附法因为操作简单，运行成本低廉，目前是使用范围较广的一种方式，尤其对苯、乙酸乙酯、氯仿、四氯化碳等非极性溶剂，活性炭吸附有非常好的效果。
+            </p>
+            <p style="text-indent: 2em;">溶剂回收用的活性炭吸附装置，一般可以分为固定床、移动床和流化床三种形式，由于固定床运转稳定，操作简单，得到了广泛的应用。
+            </p>
+            <p style="text-indent: 2em;">经过加热含有溶剂的混合气体，通入装填有活性炭的固定床反应器后，依靠活性炭孔径的选择性吸附能力，将溶剂吸附在活性炭微孔内，其余气体经反应器另一端流出；待活性炭吸附饱和后，一般用水蒸气再生法脱除吸附的溶剂进行回收，而再生后的活性炭经干燥冷却后再循环使用。整个装置一般采用两个以上的反应器交替使用。较大规模的吸附系统采用的通常流程为变温吸附法和变压吸附法流程，既可有效脱除有机污染物又可回收有用组分。
+            </p>
+            <p style="text-indent: 2em;">我国已在印刷、涂料、橡胶、胶片、造纸等很多行业成功应用了活性炭吸附技术进行溶剂回收，普遍采用活性炭间歇固定床回收技术，一般选用价格相对便宜的煤质颗粒或柱状碳。
+            </p>
 
+            <div style="text-align:center;">
+              <img src="./image/gas3-1.jpg" style="width: 50%;">
+            </div>
+            <p class="clear"></p>
+            <br>
           </div>
 
       </div>    
