--- a/gas4.html
+++ b/gas4.html
@@ -82,32 +82,50 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./gas.html">气体行业</a></div>
+        </li> 
+		    <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./gas4.html">VOC尾气脱除</a></div>
         </li> 
         <li>
-            <a href="./food1.html">蔗糖脱色</a>
+          <a href="./gas1.html">果蔬储存</a>
         </li>       
         <li>
-            <a href="./food2.html">淀粉糖的脱色</a>
-        </li>   
-        <li>
-            <a href="./food3.html">食用油中脱除PAH</a>
-        </li>       
-        <li>
-            <a href="./food4.html">果汁的纯化</a>
+          <a href="./gas2.html">油气回收</a>
         </li>  
         <li>
-            <a href="./food5.html">酒类的除杂</a>
+          <a href="./gas3.html">溶剂回收</a>
         </li>       
         <li>
-            <a href="./food6.html">乳酸，乳糖的脱色</a>
+          <a href="./gas5.html">啤酒发酵中二氧化碳的净化</a>
+        </li>       
+        <li>
+          <a href="./gas6.html">香烟过滤嘴中的气体净化</a>
         </li>  
         <li>
-            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
+          <a href="./gas7.html">天然气脱汞</a>
         </li>       
         <li>
-            <a href="./food8.html">植物炭黑</a>
-        </li>  		
+          <a href="./gas8.html">沼气脱H2S及硅氧烷</a>
+        </li>  
+        <li>
+          <a href="./gas9.html">烟气脱硫脱硝</a>
+        </li>       
+        <li>
+          <a href="./gas10.html">垃圾焚烧尾气中脱除二噁英</a>
+        </li>  
+        <li>
+          <a href="./gas11.html">PSA</a>
+        </li>       
+        <li>
+          <a href="./gas12.html">家用空气净化</a>
+        </li>   	
+        <li>
+          <a href="./gas13.html">汽车碳罐</a>
+        </li>       
+        <li>
+          <a href="./gas14.html">防毒面具及口罩</a>
+        </li>  	
       </ul> 
     </div>  
 
@@ -117,73 +135,20 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 食品行业
+            当前位置:首页 >> 应用导航 >> 气体行业
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在食品行业的应用 :</strong>
-            <br>
-            <ul class="productapp">
-              <li>
-                <a href="./food1.html" >
-                  <img src="./image/food1.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food1.html">蔗糖脱色</a>
-              </li>
-              <li>
-                <a href="./food2.html" >
-                  <img src="./image/food2.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food2.html">淀粉糖的脱色</a>
-              </li>
-			  <li>
-                <a href="./food3.html" >
-                  <img src="./image/food3.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food3.html">食用油中脱除PAH</a>
-              </li>
-			  <li>
-                <a href="./food4.html" >
-                  <img src="./image/food4.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food4.html">果汁的纯化</a>
-              </li>
-			  <li>
-                <a href="./food5.html" >
-                  <img src="./image/food5.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food5.html">酒类的除杂</a>
-              </li>
-			  <li>
-                <a href="./food6.html" >
-                  <img src="./image/food6.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food6.html">乳酸，乳糖的脱色</a>
-              </li>
-			        <li>
-                <a href="./food7.html" >
-                  <img src="./image/food7.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food7.html">咖啡或茶中脱除咖啡因</a>
-              </li>
-			        <li>
-                <a href="./food8.html" >
-                  <img src="./image/food8.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food8.html">植物炭黑</a>
-              </li>
-            </ul>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">d.	VOC尾气脱除  Remove of VOCs</h2> 
+            <div style="text-align:center;">
+              <img src="./image/gas4-0.jpg" style="width: 60%;">
+            </div>
+            <p style="text-indent: 2em;">挥发性的有机化合物，简称为VOC(Volatile Organic Compounds)，在工业生产中，通常作为溶剂来使用，如果使用量不大，一般企业会在使用之后直接排放到大气中，而大部分有机溶剂具有毒性，会容易经呼吸系统进入生物体内，从而造成脏器及神经系统的损伤。因此，国家要求企业在生产中需对VOC的排放进行监控，根据GB37822-2019《挥发性有机物无组织排放控制标准》，一旦NMHC（非甲烷总烃）超过3kg/h(重点地区2kg/h)时，企业需配置VOCs处理设施，目前VOC的处理主要有焚烧氧化、吸附、吸收、冷凝、生物、膜分离等技术，对于风量不大、浓度不高的废气，使用活性炭直接吸附是比较合适的方式。
+            </p>
+            <p style="text-indent: 2em;">活性炭直接吸附工艺目前已经相当成熟，投资少、可靠性高、维护简单、能耗低，所产生的废活性炭如果是颗粒或柱状碳，可以送至专业处理公司进行再生，实现重复利用。另外，活性炭吸附设备通常也会作为应急保险措施与其他VOCs去除设备联用。
+            </p>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
