--- a/gas7.html
+++ b/gas7.html
@@ -82,32 +82,50 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./gas.html">气体行业</a></div>
+        </li> 
+		    <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"> <a href="./gas7.html">天然气脱汞</a></div>
         </li> 
         <li>
-            <a href="./food1.html">蔗糖脱色</a>
+          <a href="./gas1.html">果蔬储存</a>
         </li>       
         <li>
-            <a href="./food2.html">淀粉糖的脱色</a>
-        </li>   
-        <li>
-            <a href="./food3.html">食用油中脱除PAH</a>
-        </li>       
-        <li>
-            <a href="./food4.html">果汁的纯化</a>
+          <a href="./gas2.html">油气回收</a>
         </li>  
         <li>
-            <a href="./food5.html">酒类的除杂</a>
+          <a href="./gas3.html">溶剂回收</a>
         </li>       
         <li>
-            <a href="./food6.html">乳酸，乳糖的脱色</a>
+          <a href="./gas4.html">VOC尾气脱除</a>
         </li>  
         <li>
-            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
+          <a href="./gas5.html">啤酒发酵中二氧化碳的净化</a>
         </li>       
         <li>
-            <a href="./food8.html">植物炭黑</a>
-        </li>  		
+          <a href="./gas6.html">香烟过滤嘴中的气体净化</a>
+        </li>  
+        <li>
+          <a href="./gas8.html">沼气脱H2S及硅氧烷</a>
+        </li>  
+        <li>
+          <a href="./gas9.html">烟气脱硫脱硝</a>
+        </li>       
+        <li>
+          <a href="./gas10.html">垃圾焚烧尾气中脱除二噁英</a>
+        </li>  
+        <li>
+          <a href="./gas11.html">PSA</a>
+        </li>       
+        <li>
+          <a href="./gas12.html">家用空气净化</a>
+        </li>   	
+        <li>
+          <a href="./gas13.html">汽车碳罐</a>
+        </li>       
+        <li>
+          <a href="./gas14.html">防毒面具及口罩</a>
+        </li>  	
       </ul> 
     </div>  
 
@@ -117,73 +135,20 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 食品行业
+            当前位置:首页 >> 应用导航 >> 气体行业
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在食品行业的应用 :</strong>
-            <br>
-            <ul class="productapp">
-              <li>
-                <a href="./food1.html" >
-                  <img src="./image/food1.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food1.html">蔗糖脱色</a>
-              </li>
-              <li>
-                <a href="./food2.html" >
-                  <img src="./image/food2.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food2.html">淀粉糖的脱色</a>
-              </li>
-			  <li>
-                <a href="./food3.html" >
-                  <img src="./image/food3.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food3.html">食用油中脱除PAH</a>
-              </li>
-			  <li>
-                <a href="./food4.html" >
-                  <img src="./image/food4.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food4.html">果汁的纯化</a>
-              </li>
-			  <li>
-                <a href="./food5.html" >
-                  <img src="./image/food5.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food5.html">酒类的除杂</a>
-              </li>
-			  <li>
-                <a href="./food6.html" >
-                  <img src="./image/food6.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food6.html">乳酸，乳糖的脱色</a>
-              </li>
-			        <li>
-                <a href="./food7.html" >
-                  <img src="./image/food7.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food7.html">咖啡或茶中脱除咖啡因</a>
-              </li>
-			        <li>
-                <a href="./food8.html" >
-                  <img src="./image/food8.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food8.html">植物炭黑</a>
-              </li>
-            </ul>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">天然气脱汞 Mercury removal from Natural Gas</h2> 
+            <div style="text-align:center;">
+              <img src="./image/gas7-0.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">天然气中都含有微量的汞，不同油田汞含量的差异很大，汞具有高挥发性、高毒性和强腐蚀性，还会引起天然气工业中的催化剂中毒。
+            </p>
+            <p style="text-indent: 2em;">现在国内采用的是载硫活性炭的脱汞工艺，活性炭作为一种载体，使反应物（一般为硫）能够有效均匀分布其中，活性炭较大的比表面积也促进了反应物对汞的吸收。天然气中的汞主要是汞单质，与活性炭中的硫反应生成硫化汞，硫化汞停留在活性炭载体中，从而实现了单质汞与天然气的分离。  
+            </p>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
