--- a/gold.html
+++ b/gold.html
@@ -82,32 +82,8 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
-        </li> 
-        <li>
-            <a href="./food1.html">蔗糖脱色</a>
-        </li>       
-        <li>
-            <a href="./food2.html">淀粉糖的脱色</a>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./gold.html">金矿行业</a></div>
         </li>   
-        <li>
-            <a href="./food3.html">食用油中脱除PAH</a>
-        </li>       
-        <li>
-            <a href="./food4.html">果汁的纯化</a>
-        </li>  
-        <li>
-            <a href="./food5.html">酒类的除杂</a>
-        </li>       
-        <li>
-            <a href="./food6.html">乳酸，乳糖的脱色</a>
-        </li>  
-        <li>
-            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
-        </li>       
-        <li>
-            <a href="./food8.html">植物炭黑</a>
-        </li>  		
       </ul> 
     </div>  
 
@@ -117,73 +93,35 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 食品行业
+            当前位置:首页 >> 应用导航 >> 金矿行业
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在食品行业的应用 :</strong>
-            <br>
-            <ul class="productapp">
-              <li>
-                <a href="./food1.html" >
-                  <img src="./image/food1.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food1.html">蔗糖脱色</a>
-              </li>
-              <li>
-                <a href="./food2.html" >
-                  <img src="./image/food2.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food2.html">淀粉糖的脱色</a>
-              </li>
-			  <li>
-                <a href="./food3.html" >
-                  <img src="./image/food3.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food3.html">食用油中脱除PAH</a>
-              </li>
-			  <li>
-                <a href="./food4.html" >
-                  <img src="./image/food4.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food4.html">果汁的纯化</a>
-              </li>
-			  <li>
-                <a href="./food5.html" >
-                  <img src="./image/food5.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food5.html">酒类的除杂</a>
-              </li>
-			  <li>
-                <a href="./food6.html" >
-                  <img src="./image/food6.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food6.html">乳酸，乳糖的脱色</a>
-              </li>
-			        <li>
-                <a href="./food7.html" >
-                  <img src="./image/food7.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food7.html">咖啡或茶中脱除咖啡因</a>
-              </li>
-			        <li>
-                <a href="./food8.html" >
-                  <img src="./image/food8.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food8.html">植物炭黑</a>
-              </li>
-            </ul>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">活性炭在金矿行业应用</h2> 
+            <div style="text-align:center;">
+              <img src="./image/gold1-0.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">金矿中的黄金冶炼提取过程较为复杂，对于高品位的矿石一般使用氰化法，对于低品位的矿石一般使用堆浸法。</p>
+            <p style="text-indent: 2em;">氰化法提金工艺是现在从矿石或精矿中提取金的主要方法。氰化法提金工艺包括：氰化浸出、浸出矿浆的洗涤过滤、氰化液或氰化矿浆中金的提取和成品的冶炼等几个基本工序。
+            </p>
+            <p style="text-indent: 2em;">我国黄金矿山现有氰化厂基本采用两类提金工艺流程，一类是以浓密机进行连续逆流洗涤，用锌粉置换沉淀回收金的常规氰化法提金工艺流程（CCD法和CCF法），另一类则是无须过滤洗涤，采用活性炭直接从氰化矿浆中吸附回收金的无过滤氰化炭浆工艺流程(CIP法和CIL法)；
+            </p>
+            <p style="text-indent: 2em;">CIP（carbon in pulp）即炭浆法提金，是一种直接用活性炭从氰化矿浆中吸附回收金的无过滤氰化炭浆工艺流程。主要包括浸出矿浆的准备，氰化浸出，活性炭吸附，载金炭解吸，经电击得到金泥，脱金炭再循环，浸出矿浆的处理等七个作业阶段。
+            </p>
+            <p style="text-indent: 2em;">CIL（Carbon In Leach），即炭浸法提金。是一种向矿浆中加入活性炭，同时进行浸出和吸附的工艺流程。主要步骤为破碎，磨矿，浸出，解吸电解，尾矿脱水等步骤，与CIP相比简化了CIP工艺的浸出和氰化。
+            </p>
+            <p style="text-indent: 2em;">这两种方法一般是用颗粒或柱状碳，在罐中进行搅拌。由于搅拌的过程中活性炭与含有矿物的浆料反复摩擦，因此对活性炭的球磨强度有一定要求。
+            </p>
+            <div style="text-align:center;">
+              <img src="./image/gold1-1.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">对于堆浸法，就是将低品位的金矿石破碎至一定粒度（或造粒），堆积在由沥青、混凝土或塑料布等材料铺筑的防漏底垫上，用低浓度氰化物、碱性溶液、无毒溶剂或稀硫酸等溶液在矿堆上喷淋，使金溶解，含金的溶液从矿堆上渗滤出来，然后用活性炭吸附或锌粉置换沉淀等方法回收金。如果使用活性炭吸附，一般是采取固定床工艺，浆料从活性炭罐上端流入，经活性炭层吸附黄金后从碳罐下端流出。一般这种方式多采用颗粒碳，对碳的要求不高。
+            </p>    
+            <div style="text-align:center;">
+              <img src="./image/gold1-2.jpg" style="width: 30%;">
+            </div>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
