--- a/water1.html
+++ b/water1.html
@@ -82,32 +82,17 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./water.html">水行业</a></div>
         </li> 
-        <li>
-            <a href="./food1.html">蔗糖脱色</a>
+		    <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./water1.html">饮用水</a></div>
         </li>       
         <li>
-            <a href="./food2.html">淀粉糖的脱色</a>
-        </li>   
-        <li>
-            <a href="./food3.html">食用油中脱除PAH</a>
-        </li>       
-        <li>
-            <a href="./food4.html">果汁的纯化</a>
+          <a href="./water2.html">污水处理</a>
         </li>  
         <li>
-            <a href="./food5.html">酒类的除杂</a>
-        </li>       
-        <li>
-            <a href="./food6.html">乳酸，乳糖的脱色</a>
-        </li>  
-        <li>
-            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
-        </li>       
-        <li>
-            <a href="./food8.html">植物炭黑</a>
-        </li>  		
+          <a href="./water3.html">冷凝水处理</a>
+        </li>     
       </ul> 
     </div>  
 
@@ -117,73 +102,27 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 食品行业
+            当前位置:首页 >> 应用导航 >> 水行业
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在食品行业的应用 :</strong>
-            <br>
-            <ul class="productapp">
-              <li>
-                <a href="./food1.html" >
-                  <img src="./image/food1.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food1.html">蔗糖脱色</a>
-              </li>
-              <li>
-                <a href="./food2.html" >
-                  <img src="./image/food2.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food2.html">淀粉糖的脱色</a>
-              </li>
-			  <li>
-                <a href="./food3.html" >
-                  <img src="./image/food3.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food3.html">食用油中脱除PAH</a>
-              </li>
-			  <li>
-                <a href="./food4.html" >
-                  <img src="./image/food4.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food4.html">果汁的纯化</a>
-              </li>
-			  <li>
-                <a href="./food5.html" >
-                  <img src="./image/food5.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food5.html">酒类的除杂</a>
-              </li>
-			  <li>
-                <a href="./food6.html" >
-                  <img src="./image/food6.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food6.html">乳酸，乳糖的脱色</a>
-              </li>
-			        <li>
-                <a href="./food7.html" >
-                  <img src="./image/food7.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food7.html">咖啡或茶中脱除咖啡因</a>
-              </li>
-			        <li>
-                <a href="./food8.html" >
-                  <img src="./image/food8.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food8.html">植物炭黑</a>
-              </li>
-            </ul>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">饮用水 Drinking water</h2> 
+            <div style="text-align:center;">
+              <img src="./image/water1-0.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">近年来，我国的地表水体被大量的有害化学物质和病原体微生物污染，常规净水工艺无法消除这些种类繁多的有害物，饮用水深度处理势在必行。活性炭有着巨大的比表面积和发达空隙，被广泛应用于各种处理工艺中。
+            </p>
+            <p style="text-indent: 2em;">水体中的有机物主要是溶解性有机污染物（农药、医药、塑化剂、个人护理防护用品）,多数分子直径小于5nm，采用活性炭吸附的方式不仅操作简单费用低廉，而且净化效果也非常好。
+            </p>
+            <p style="text-indent: 2em;">一般颗粒或柱状活性炭多用于水的深度处理，其处理方式一般为活性炭滤床过滤，经过一段时间吸附饱和后的活性炭被再生后重复使用。而粉状炭多用于水的预处理，例如在混凝时投加到水中，吸附水中的有机物后在沉淀时与矾花一起从水中去除，所投加的粉炭属一次性使用，无法进行再生。与粉炭相比，颗粒或柱状炭过滤的处理效果稳定，出水水质好，吸附饱和后的活性炭可以再生重复使用，运行费用较低，因此大型水厂一般都使用粒状炭，不过粒状炭需单设炭滤池或滤罐，设备投资比粉状炭高。
+            </p>
+            <p style="text-indent: 2em;">随着人们对水质要求的提高，家庭净水器、直饮水终端逐渐在日常生活中普及。大多数净水器都使用活性炭作为滤材，主要分为两类：直接灌装颗粒活性炭制作成散炭滤芯；将粉末炭与粘结剂混合烧制成炭棒。净水器活性炭通常使用椰壳炭，对灰分、pH、铁含量等指标有着更高要求。 
+            </p>
+            <div style="text-align:center;">
+              <img src="./image/water1-1.jpg" style="width: 50%;">
+            </div>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
