--- a/capacitor.html
+++ b/capacitor.html
@@ -82,32 +82,8 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./capacitor.html">超级电容器</a></div>
         </li> 
-        <li>
-            <a href="./food1.html">蔗糖脱色</a>
-        </li>       
-        <li>
-            <a href="./food2.html">淀粉糖的脱色</a>
-        </li>   
-        <li>
-            <a href="./food3.html">食用油中脱除PAH</a>
-        </li>       
-        <li>
-            <a href="./food4.html">果汁的纯化</a>
-        </li>  
-        <li>
-            <a href="./food5.html">酒类的除杂</a>
-        </li>       
-        <li>
-            <a href="./food6.html">乳酸，乳糖的脱色</a>
-        </li>  
-        <li>
-            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
-        </li>       
-        <li>
-            <a href="./food8.html">植物炭黑</a>
-        </li>  		
       </ul> 
     </div>  
 
@@ -117,73 +93,25 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 食品行业
+            当前位置:首页 >> 应用导航 >> 超级电容器
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在食品行业的应用 :</strong>
-            <br>
-            <ul class="productapp">
-              <li>
-                <a href="./food1.html" >
-                  <img src="./image/food1.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food1.html">蔗糖脱色</a>
-              </li>
-              <li>
-                <a href="./food2.html" >
-                  <img src="./image/food2.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food2.html">淀粉糖的脱色</a>
-              </li>
-			  <li>
-                <a href="./food3.html" >
-                  <img src="./image/food3.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food3.html">食用油中脱除PAH</a>
-              </li>
-			  <li>
-                <a href="./food4.html" >
-                  <img src="./image/food4.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food4.html">果汁的纯化</a>
-              </li>
-			  <li>
-                <a href="./food5.html" >
-                  <img src="./image/food5.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food5.html">酒类的除杂</a>
-              </li>
-			  <li>
-                <a href="./food6.html" >
-                  <img src="./image/food6.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food6.html">乳酸，乳糖的脱色</a>
-              </li>
-			        <li>
-                <a href="./food7.html" >
-                  <img src="./image/food7.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food7.html">咖啡或茶中脱除咖啡因</a>
-              </li>
-			        <li>
-                <a href="./food8.html" >
-                  <img src="./image/food8.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food8.html">植物炭黑</a>
-              </li>
-            </ul>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">活性炭在超级电容器的应用</h2> 
+            <div style="text-align:center;">
+              <img src="./image/capacitor1-0.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">超级电容器是指介于传统电容器和充电电池之间的一种新型储能装置，它既具有电容器快速充放电的特性，同时又具有电池的储能特性。
+            </p>
+            <p style="text-indent: 2em;">超级电容活性炭通常称为超级活性炭或炭电极材料，具有超大的比表面积（2000m2/g以上），一般为椰壳粉末碳，孔径分布集中，低灰分，导电性好，适用制造高性能电池及双电层电容器产品。其具有电容的大电流快速充放电特性，同时也兼有电池的储能特性，重复使用寿命长，放电时利用移动导体间的电子（而不依靠化学反应）释放电流，从而为设备提供电源。 
+            </p>
+            <p style="text-indent: 2em;">超级电容器极长的工作寿命和快速充放电特性，也在电动车辆、混合动力车辆、电动工具、电动玩具、铁路系统、电力系统等广泛的领域得到应用。
+            </p>                         
+            <div style="text-align:center;">
+              <img src="./image/capacitor1-1.jpg" style="width: 50%;">
+            </div>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
