--- a/catalyst.html
+++ b/catalyst.html
@@ -82,32 +82,20 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./catalyst.html">催化剂行业</a></div>
         </li> 
         <li>
-            <a href="./food1.html">蔗糖脱色</a>
+          <a href="./catalyst1.html">PU领域催化</a>
         </li>       
         <li>
-            <a href="./food2.html">淀粉糖的脱色</a>
-        </li>   
-        <li>
-            <a href="./food3.html">食用油中脱除PAH</a>
-        </li>       
-        <li>
-            <a href="./food4.html">果汁的纯化</a>
+          <a href="./catalyst2.html">三聚氯氰的合成</a>
         </li>  
         <li>
-            <a href="./food5.html">酒类的除杂</a>
-        </li>       
+          <a href="./catalyst3.html">VCM的合成</a>
+        </li> 
         <li>
-            <a href="./food6.html">乳酸，乳糖的脱色</a>
-        </li>  
-        <li>
-            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
-        </li>       
-        <li>
-            <a href="./food8.html">植物炭黑</a>
-        </li>  		
+          <a href="./catalyst4.html">加氢催化剂</a>
+        </li>        	
       </ul> 
     </div>  
 
@@ -117,69 +105,41 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 食品行业
+            当前位置:首页 >> 应用导航 >> 催化剂行业
           </div>
 
           <div class="conNeiText">  
             
-            <strong style="line-height:50px;">活性炭在食品行业的应用 :</strong>
+            <strong style="line-height:50px;">活性炭在催化剂行业的应用 :</strong>
             <br>
             <ul class="productapp">
               <li>
-                <a href="./food1.html" >
-                  <img src="./image/food1.jpg"/>
+                <a href="./catalyst1.html" >
+                  <img src="./image/catalyst1.jpg"/>
                 </a>
                 <br>
-                <a class="atext" href="./food1.html">蔗糖脱色</a>
+                <a class="atext" href="./catalyst1.html">PU领域催化</a>
               </li>
               <li>
-                <a href="./food2.html" >
-                  <img src="./image/food2.jpg"/>
+                <a href="./catalyst2.html" >
+                  <img src="./image/catalyst2.jpg"/>
                 </a>
                 <br>
-                <a class="atext" href="./food2.html">淀粉糖的脱色</a>
-              </li>
-			  <li>
-                <a href="./food3.html" >
-                  <img src="./image/food3.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food3.html">食用油中脱除PAH</a>
-              </li>
-			  <li>
-                <a href="./food4.html" >
-                  <img src="./image/food4.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food4.html">果汁的纯化</a>
-              </li>
-			  <li>
-                <a href="./food5.html" >
-                  <img src="./image/food5.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food5.html">酒类的除杂</a>
-              </li>
-			  <li>
-                <a href="./food6.html" >
-                  <img src="./image/food6.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food6.html">乳酸，乳糖的脱色</a>
+                <a class="atext" href="./catalyst2.html">三聚氯氰的合成</a>
               </li>
 			        <li>
-                <a href="./food7.html" >
-                  <img src="./image/food7.jpg"/>
+                <a href="./catalyst3.html" >
+                  <img src="./image/catalyst3.jpg"/>
                 </a>
                 <br>
-                <a class="atext" href="./food7.html">咖啡或茶中脱除咖啡因</a>
+                <a class="atext" href="./catalyst3.html">VCM的合成</a>
               </li>
-			        <li>
-                <a href="./food8.html" >
-                  <img src="./image/food8.jpg"/>
+              <li>
+                <a href="./catalyst4.html" >
+                  <img src="./image/catalyst4.jpg"/>
                 </a>
                 <br>
-                <a class="atext" href="./food8.html">植物炭黑</a>
+                <a class="atext" href="./catalyst4.html">加氢催化剂</a>
               </li>
             </ul>
             <p class="clear"></p>
