--- a/catalyst1.html
+++ b/catalyst1.html
@@ -82,32 +82,20 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./catalyst.html">催化剂行业</a></div>
+        </li> 
+		    <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./catalyst1.html">PU领域催化</a></div>
+        </li>    
+        <li>
+          <a href="./catalyst2.html">三聚氯氰的合成</a>
+        </li>  
+        <li>
+          <a href="./catalyst3.html">VCM的合成</a>
         </li> 
         <li>
-            <a href="./food1.html">蔗糖脱色</a>
-        </li>       
-        <li>
-            <a href="./food2.html">淀粉糖的脱色</a>
-        </li>   
-        <li>
-            <a href="./food3.html">食用油中脱除PAH</a>
-        </li>       
-        <li>
-            <a href="./food4.html">果汁的纯化</a>
-        </li>  
-        <li>
-            <a href="./food5.html">酒类的除杂</a>
-        </li>       
-        <li>
-            <a href="./food6.html">乳酸，乳糖的脱色</a>
-        </li>  
-        <li>
-            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
-        </li>       
-        <li>
-            <a href="./food8.html">植物炭黑</a>
-        </li>  		
+          <a href="./catalyst4.html">加氢催化剂</a>
+        </li>    
       </ul> 
     </div>  
 
@@ -117,73 +105,24 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 食品行业
+            当前位置:首页 >> 应用导航 >> 催化剂行业
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在食品行业的应用 :</strong>
-            <br>
-            <ul class="productapp">
-              <li>
-                <a href="./food1.html" >
-                  <img src="./image/food1.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food1.html">蔗糖脱色</a>
-              </li>
-              <li>
-                <a href="./food2.html" >
-                  <img src="./image/food2.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food2.html">淀粉糖的脱色</a>
-              </li>
-			  <li>
-                <a href="./food3.html" >
-                  <img src="./image/food3.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food3.html">食用油中脱除PAH</a>
-              </li>
-			  <li>
-                <a href="./food4.html" >
-                  <img src="./image/food4.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food4.html">果汁的纯化</a>
-              </li>
-			  <li>
-                <a href="./food5.html" >
-                  <img src="./image/food5.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food5.html">酒类的除杂</a>
-              </li>
-			  <li>
-                <a href="./food6.html" >
-                  <img src="./image/food6.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food6.html">乳酸，乳糖的脱色</a>
-              </li>
-			        <li>
-                <a href="./food7.html" >
-                  <img src="./image/food7.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food7.html">咖啡或茶中脱除咖啡因</a>
-              </li>
-			        <li>
-                <a href="./food8.html" >
-                  <img src="./image/food8.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food8.html">植物炭黑</a>
-              </li>
-            </ul>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">PU领域催化 Catalyst in PU</h2> 
+            <div style="text-align:center;">
+              <img src="./image/catalyst1-0.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">PU为聚氨酯树脂，是由聚醚多元醇与异氰酸酯聚合而成，主要应用于各种泡沫塑料、弹性体、涂料、橡胶、纤维等领域。其中聚醚多元醇由多元醇起始剂如甘油、乙二醇、丙二醇等与氧化烯烃或环氧化物如环氧乙烷、环氧丙烷等在催化剂下开环聚合得到，其催化剂主要有阴离子型的碱金属氧化物及阳离子型的路易斯酸。
+            </p>
+            <p style="text-indent: 2em;">而异氰酸酯，属于含有-NCO基团的总称，目前市面上使用最广泛的有TDI（二甲苯二异氰酸酯），MDI（二苯基甲烷二异氰酸酯）这两种，还有诸如IPDI、HDI等新产品。
+            </p>
+            <p style="text-indent: 2em;">TDI的合成，其实原料为甲苯，经过二段硝化后得到DNT，再经过Pd/C或雷尼镍的还原后得到TDA，然后与光气直接反应得到TDI。一般光气是CO与Cl2在现场通过活性炭直接催化得到，TDA的光气化反应完之后，会残留部分光气，也会通过尾部的活性炭催化装置处理。
+            </p>
+            <p style="text-indent: 2em;">MDI的合成，其实原料是苯，通过硝化后再经过Pd/C或雷尼镍还原后得到苯胺，然后与甲醛缩合得到MDA，最后光气化得到MDI，同样也存在光气的后处理过程。
+            </p>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
