--- a/catalyst2.html
+++ b/catalyst2.html
@@ -82,32 +82,20 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./catalyst.html">催化剂行业</a></div>
+        </li> 
+		    <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./catalyst2.html">三聚氯氰的合成</a></div>
         </li> 
         <li>
-            <a href="./food1.html">蔗糖脱色</a>
+          <a href="./catalyst1.html">PU领域催化</a>
         </li>       
         <li>
-            <a href="./food2.html">淀粉糖的脱色</a>
-        </li>   
+          <a href="./catalyst3.html">VCM的合成</a>
+        </li> 
         <li>
-            <a href="./food3.html">食用油中脱除PAH</a>
-        </li>       
-        <li>
-            <a href="./food4.html">果汁的纯化</a>
-        </li>  
-        <li>
-            <a href="./food5.html">酒类的除杂</a>
-        </li>       
-        <li>
-            <a href="./food6.html">乳酸，乳糖的脱色</a>
-        </li>  
-        <li>
-            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
-        </li>       
-        <li>
-            <a href="./food8.html">植物炭黑</a>
-        </li>  		
+          <a href="./catalyst4.html">加氢催化剂</a>
+        </li>    
       </ul> 
     </div>  
 
@@ -117,73 +105,20 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 食品行业
+            当前位置:首页 >> 应用导航 >> 催化剂行业
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在食品行业的应用 :</strong>
-            <br>
-            <ul class="productapp">
-              <li>
-                <a href="./food1.html" >
-                  <img src="./image/food1.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food1.html">蔗糖脱色</a>
-              </li>
-              <li>
-                <a href="./food2.html" >
-                  <img src="./image/food2.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food2.html">淀粉糖的脱色</a>
-              </li>
-			  <li>
-                <a href="./food3.html" >
-                  <img src="./image/food3.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food3.html">食用油中脱除PAH</a>
-              </li>
-			  <li>
-                <a href="./food4.html" >
-                  <img src="./image/food4.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food4.html">果汁的纯化</a>
-              </li>
-			  <li>
-                <a href="./food5.html" >
-                  <img src="./image/food5.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food5.html">酒类的除杂</a>
-              </li>
-			  <li>
-                <a href="./food6.html" >
-                  <img src="./image/food6.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food6.html">乳酸，乳糖的脱色</a>
-              </li>
-			        <li>
-                <a href="./food7.html" >
-                  <img src="./image/food7.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food7.html">咖啡或茶中脱除咖啡因</a>
-              </li>
-			        <li>
-                <a href="./food8.html" >
-                  <img src="./image/food8.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food8.html">植物炭黑</a>
-              </li>
-            </ul>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">三聚氯氰的合成Triclosan synthesis</h2> 
+            <div style="text-align:center;">
+              <img src="./image/catalyst2-0.jpg" style="width: 30%;">
+            </div>
+            <p style="text-indent: 2em;">三聚氰氯（C3N3Cl3），又名1,3,5-三氯均三嗪，一种重要的精细化工产品，具有广泛的用途 在农药产品，可用于如灭蝇胺、扑草净、西玛津、西草净、阿特拉津、特丁津、莠灭净等合成；在活性染料中，可制备如直接黄L-5R、活性嫩黄X-6G、活性嫩黄X-7G等；在荧光增白剂中，可与DSD酸结合同时进行氨性烷基基团取代得到增白剂；也可用于诸如纺织物防缩水剂、表面活性剂、橡胶促进剂等工业生产中。
+            </p>
+            <p style="text-indent: 2em;">三聚氰氯的生产工艺比较简单，一般先通过氰化钠或氢氰酸与氯气反应生成氯氰，再通过活性炭直接催化得到三聚氯氰。
+            </p>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
