--- a/gas.html
+++ b/gas.html
@@ -82,32 +82,50 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./gas.html">气体行业</a></div>
         </li> 
         <li>
-            <a href="./food1.html">蔗糖脱色</a>
+          <a href="./gas1.html">果蔬储存</a>
         </li>       
         <li>
-            <a href="./food2.html">淀粉糖的脱色</a>
-        </li>   
-        <li>
-            <a href="./food3.html">食用油中脱除PAH</a>
-        </li>       
-        <li>
-            <a href="./food4.html">果汁的纯化</a>
+          <a href="./gas2.html">油气回收</a>
         </li>  
         <li>
-            <a href="./food5.html">酒类的除杂</a>
+          <a href="./gas3.html">溶剂回收</a>
         </li>       
         <li>
-            <a href="./food6.html">乳酸，乳糖的脱色</a>
+          <a href="./gas4.html">VOC尾气脱除</a>
         </li>  
         <li>
-            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
+          <a href="./gas5.html">啤酒发酵中二氧化碳的净化</a>
         </li>       
         <li>
-            <a href="./food8.html">植物炭黑</a>
-        </li>  		
+          <a href="./gas6.html">香烟过滤嘴中的气体净化</a>
+        </li>  
+        <li>
+          <a href="./gas7.html">天然气脱汞</a>
+        </li>       
+        <li>
+          <a href="./gas8.html">沼气脱H2S及硅氧烷</a>
+        </li>  
+        <li>
+          <a href="./gas9.html">烟气脱硫脱硝</a>
+        </li>       
+        <li>
+          <a href="./gas10.html">垃圾焚烧尾气中脱除二噁英</a>
+        </li>  
+        <li>
+          <a href="./gas11.html">PSA</a>
+        </li>       
+        <li>
+          <a href="./gas12.html">家用空气净化</a>
+        </li>   	
+        <li>
+          <a href="./gas13.html">汽车碳罐</a>
+        </li>       
+        <li>
+          <a href="./gas14.html">防毒面具及口罩</a>
+        </li>   	
       </ul> 
     </div>  
 
@@ -117,69 +135,111 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 食品行业
+            当前位置:首页 >> 应用导航 >> 气体行业
           </div>
 
           <div class="conNeiText">  
             
-            <strong style="line-height:50px;">活性炭在食品行业的应用 :</strong>
+            <strong style="line-height:50px;">活性炭在气体行业的应用 :</strong>
             <br>
             <ul class="productapp">
               <li>
-                <a href="./food1.html" >
-                  <img src="./image/food1.jpg"/>
+                <a href="./gas1.html" >
+                  <img src="./image/gas1.jpg"/>
                 </a>
                 <br>
-                <a class="atext" href="./food1.html">蔗糖脱色</a>
+                <a class="atext" href="./gas1.html">果蔬储存</a>
               </li>
               <li>
-                <a href="./food2.html" >
-                  <img src="./image/food2.jpg"/>
+                <a href="./gas2.html" >
+                  <img src="./image/gas2.jpg"/>
                 </a>
                 <br>
-                <a class="atext" href="./food2.html">淀粉糖的脱色</a>
+                <a class="atext" href="./gas2.html">油气回收</a>
               </li>
 			        <li>
-                <a href="./food3.html" >
-                  <img src="./image/food3.jpg"/>
+                <a href="./gas3.html" >
+                  <img src="./image/gas3.jpg"/>
                 </a>
                 <br>
-                <a class="atext" href="./food3.html">食用油中脱除PAH</a>
+                <a class="atext" href="./gas3.html">溶剂回收</a>
               </li>
 			        <li>
-                <a href="./food4.html" >
-                  <img src="./image/food4.jpg"/>
+                <a href="./gas4.html" >
+                  <img src="./image/gas4.jpg"/>
                 </a>
                 <br>
-                <a class="atext" href="./food4.html">果汁的纯化</a>
+                <a class="atext" href="./gas4.html">VOC尾气脱除</a>
               </li>
 			        <li>
-                <a href="./food5.html" >
-                  <img src="./image/food5.jpg"/>
+                <a href="./gas5.html" >
+                  <img src="./image/gas5.jpg"/>
                 </a>
                 <br>
-                <a class="atext" href="./food5.html">酒类的除杂</a>
+                <a class="atext" href="./gas5.html">啤酒发酵中二氧化碳的净化</a>
               </li>
 			        <li>
-                <a href="./food6.html" >
-                  <img src="./image/food6.jpg"/>
+                <a href="./gas6.html" >
+                  <img src="./image/gas6.jpg"/>
                 </a>
                 <br>
-                <a class="atext" href="./food6.html">乳酸，乳糖的脱色</a>
+                <a class="atext" href="./gas6.html">香烟过滤嘴中的气体净化</a>
               </li>
 			        <li>
-                <a href="./food7.html" >
-                  <img src="./image/food7.jpg"/>
+                <a href="./gas7.html" >
+                  <img src="./image/gas7.jpg"/>
                 </a>
                 <br>
-                <a class="atext" href="./food7.html">咖啡或茶中脱除咖啡因</a>
+                <a class="atext" href="./gas7.html">天然气脱汞</a>
               </li>
 			        <li>
-                <a href="./food8.html" >
-                  <img src="./image/food8.jpg"/>
+                <a href="./gas8.html" >
+                  <img src="./image/gas8.jpg"/>
                 </a>
                 <br>
-                <a class="atext" href="./food1.html">植物炭黑</a>
+                <a class="atext" href="./gas8.html">沼气脱H2S及硅氧烷</a>
+              </li>
+              <li>
+                <a href="./gas9.html" >
+                  <img src="./image/gas9.jpg"/>
+                </a>
+                <br>
+                <a class="atext" href="./gas9.html">烟气脱硫脱硝</a>
+              </li>
+			        <li>
+                <a href="./gas10.html" >
+                  <img src="./image/gas10.jpg"/>
+                </a>
+                <br>
+                <a class="atext" href="./gas10.html">垃圾焚烧尾气中脱除二噁英</a>
+              </li>
+              <li>
+                <a href="./gas11.html" >
+                  <img src="./image/gas11.jpg"/>
+                </a>
+                <br>
+                <a class="atext" href="./gas11.html">PSA</a>
+              </li>
+			        <li>
+                <a href="./gas12.html" >
+                  <img src="./image/gas12.jpg"/>
+                </a>
+                <br>
+                <a class="atext" href="./gas12.html">家用空气净化</a>
+              </li>
+              <li>
+                <a href="./gas13.html" >
+                  <img src="./image/gas13.jpg"/>
+                </a>
+                <br>
+                <a class="atext" href="./gas13.html">汽车碳罐</a>
+              </li>
+			        <li>
+                <a href="./gas14.html" >
+                  <img src="./image/gas14.jpg"/>
+                </a>
+                <br>
+                <a class="atext" href="./gas14.html">防毒面具及口罩</a>
               </li>
             </ul>
             <p class="clear"></p>
