--- a/gas10.html
+++ b/gas10.html
@@ -82,32 +82,50 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./gas.html">气体行业</a></div>
+        </li> 
+		    <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./gas10.html">垃圾焚烧尾气中脱除二噁英</a></div>
         </li> 
         <li>
-            <a href="./food1.html">蔗糖脱色</a>
+          <a href="./gas1.html">果蔬储存</a>
         </li>       
         <li>
-            <a href="./food2.html">淀粉糖的脱色</a>
-        </li>   
-        <li>
-            <a href="./food3.html">食用油中脱除PAH</a>
-        </li>       
-        <li>
-            <a href="./food4.html">果汁的纯化</a>
+          <a href="./gas2.html">油气回收</a>
         </li>  
         <li>
-            <a href="./food5.html">酒类的除杂</a>
+          <a href="./gas3.html">溶剂回收</a>
         </li>       
         <li>
-            <a href="./food6.html">乳酸，乳糖的脱色</a>
+          <a href="./gas4.html">VOC尾气脱除</a>
         </li>  
         <li>
-            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
+          <a href="./gas5.html">啤酒发酵中二氧化碳的净化</a>
         </li>       
         <li>
-            <a href="./food8.html">植物炭黑</a>
-        </li>  		
+          <a href="./gas6.html">香烟过滤嘴中的气体净化</a>
+        </li>  
+        <li>
+          <a href="./gas7.html">天然气脱汞</a>
+        </li>       
+        <li>
+          <a href="./gas8.html">沼气脱H2S及硅氧烷</a>
+        </li>  
+        <li>
+          <a href="./gas9.html">烟气脱硫脱硝</a>
+        </li>        
+        <li>
+          <a href="./gas11.html">PSA</a>
+        </li>       
+        <li>
+          <a href="./gas12.html">家用空气净化</a>
+        </li>   	
+        <li>
+          <a href="./gas13.html">汽车碳罐</a>
+        </li>       
+        <li>
+          <a href="./gas14.html">防毒面具及口罩</a>
+        </li>  	
       </ul> 
     </div>  
 
@@ -117,73 +135,27 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 食品行业
+            当前位置:首页 >> 应用导航 >> 气体行业
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在食品行业的应用 :</strong>
-            <br>
-            <ul class="productapp">
-              <li>
-                <a href="./food1.html" >
-                  <img src="./image/food1.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food1.html">蔗糖脱色</a>
-              </li>
-              <li>
-                <a href="./food2.html" >
-                  <img src="./image/food2.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food2.html">淀粉糖的脱色</a>
-              </li>
-			  <li>
-                <a href="./food3.html" >
-                  <img src="./image/food3.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food3.html">食用油中脱除PAH</a>
-              </li>
-			  <li>
-                <a href="./food4.html" >
-                  <img src="./image/food4.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food4.html">果汁的纯化</a>
-              </li>
-			  <li>
-                <a href="./food5.html" >
-                  <img src="./image/food5.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food5.html">酒类的除杂</a>
-              </li>
-			  <li>
-                <a href="./food6.html" >
-                  <img src="./image/food6.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food6.html">乳酸，乳糖的脱色</a>
-              </li>
-			        <li>
-                <a href="./food7.html" >
-                  <img src="./image/food7.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food7.html">咖啡或茶中脱除咖啡因</a>
-              </li>
-			        <li>
-                <a href="./food8.html" >
-                  <img src="./image/food8.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food8.html">植物炭黑</a>
-              </li>
-            </ul>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">垃圾焚烧尾气中脱除二噁英 Removal of dioxins from waste incineration exhaust</h2> 
+            <div style="text-align:center;">
+              <img src="./image/gas10-0.jpg" style="width: 60%;">
+            </div>
+            <p style="text-indent: 2em;">随着城市垃圾产量的大幅度增加和焚烧技术的不断发展，垃圾焚烧已经成为了很多国家大力发展的垃圾处理技术。城市生活垃圾焚烧会产生酸性气体、灰分、重金属和含氯有机物等有害物质。其中的二噁英类物质具有强致癌性，近年来引起了越来越多的关注。
+            </p>
+            <p style="text-indent: 2em;">二噁英是多氯代二苯并二噁英（PCDD或二噁英）和多氯代二苯并呋喃（PCDF或呋喃）的统称, 二噁英的毒性十分大，万分之一克的二噁英就会给人类健康带来严重的危害。这些危害包括软组织，肉瘤，淋巴瘤，皮肤损害（氯痤疮），胃癌，生物化学肝测试异常，高血脂，致命伤，免疫系统和神经副作用等。同时，二噁英化合物在环境和生物体内都具有稳定性，因此它对人类的影响是慢性而又广泛的。
+            </p>
+            <p style="text-indent: 2em;">活性炭吸附二噁英的过程包括两个步骤：首先，将活性炭注射入废气流中；随后，在废气下游安置静电除尘器或者织物过滤器来移除使用后的活性炭和残余的灰尘。根据活性炭添加的方法，活性炭吸附二噁英过程可以分为三种不同的类型：携带流、移动床和固定床过程。在所有的过程中，废气中PCDD/F的移除都是通过碳的吸附完成的。
+            </p>
+            <p style="text-indent: 2em;">活性炭吸附移除PCDD/F的效率通常比较高，在一个装配有旋风分离器，干石灰洗涤器和织物过滤器的生活垃圾焚烧炉中喷上活性炭可以在第一年将二噁英的移除效率从26.9%提高到96.6%。由于活性炭对二噁英的吸附效果良好，安装方便，技术简单，已经在垃圾焚烧厂中得到了广泛的应用。
+            </p>
+            <div style="text-align:center;">
+              <img src="./image/gas10-1.jpg" style="width: 80%;">
+            </div>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
