--- a/gas11.html
+++ b/gas11.html
@@ -82,32 +82,50 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./gas.html">气体行业</a></div>
+        </li> 
+		    <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./gas11.html">PSA</a></div>
         </li> 
         <li>
-            <a href="./food1.html">蔗糖脱色</a>
+          <a href="./gas1.html">果蔬储存</a>
         </li>       
         <li>
-            <a href="./food2.html">淀粉糖的脱色</a>
-        </li>   
-        <li>
-            <a href="./food3.html">食用油中脱除PAH</a>
-        </li>       
-        <li>
-            <a href="./food4.html">果汁的纯化</a>
+          <a href="./gas2.html">油气回收</a>
         </li>  
         <li>
-            <a href="./food5.html">酒类的除杂</a>
+          <a href="./gas3.html">溶剂回收</a>
         </li>       
         <li>
-            <a href="./food6.html">乳酸，乳糖的脱色</a>
+          <a href="./gas4.html">VOC尾气脱除</a>
         </li>  
         <li>
-            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
+          <a href="./gas5.html">啤酒发酵中二氧化碳的净化</a>
         </li>       
         <li>
-            <a href="./food8.html">植物炭黑</a>
-        </li>  		
+          <a href="./gas6.html">香烟过滤嘴中的气体净化</a>
+        </li>  
+        <li>
+          <a href="./gas7.html">天然气脱汞</a>
+        </li>       
+        <li>
+          <a href="./gas8.html">沼气脱H2S及硅氧烷</a>
+        </li>  
+        <li>
+          <a href="./gas9.html">烟气脱硫脱硝</a>
+        </li>       
+        <li>
+          <a href="./gas10.html">垃圾焚烧尾气中脱除二噁英</a>
+        </li>       
+        <li>
+          <a href="./gas12.html">家用空气净化</a>
+        </li>   	
+        <li>
+          <a href="./gas13.html">汽车碳罐</a>
+        </li>       
+        <li>
+          <a href="./gas14.html">防毒面具及口罩</a>
+        </li>  	
       </ul> 
     </div>  
 
@@ -117,73 +135,23 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 食品行业
+            当前位置:首页 >> 应用导航 >> 气体行业
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在食品行业的应用 :</strong>
-            <br>
-            <ul class="productapp">
-              <li>
-                <a href="./food1.html" >
-                  <img src="./image/food1.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food1.html">蔗糖脱色</a>
-              </li>
-              <li>
-                <a href="./food2.html" >
-                  <img src="./image/food2.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food2.html">淀粉糖的脱色</a>
-              </li>
-			  <li>
-                <a href="./food3.html" >
-                  <img src="./image/food3.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food3.html">食用油中脱除PAH</a>
-              </li>
-			  <li>
-                <a href="./food4.html" >
-                  <img src="./image/food4.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food4.html">果汁的纯化</a>
-              </li>
-			  <li>
-                <a href="./food5.html" >
-                  <img src="./image/food5.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food5.html">酒类的除杂</a>
-              </li>
-			  <li>
-                <a href="./food6.html" >
-                  <img src="./image/food6.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food6.html">乳酸，乳糖的脱色</a>
-              </li>
-			        <li>
-                <a href="./food7.html" >
-                  <img src="./image/food7.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food7.html">咖啡或茶中脱除咖啡因</a>
-              </li>
-			        <li>
-                <a href="./food8.html" >
-                  <img src="./image/food8.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food8.html">植物炭黑</a>
-              </li>
-            </ul>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">PSA</h2> 
+            <div style="text-align:center;">
+              <img src="./image/gas11-0.jpg" style="width: 60%;">
+            </div>
+            <p style="text-indent: 2em;">PSA即变压吸附，是一项广泛应用于气体净化的技术，自20世纪60年代，市场上就引进了PSA技术，如今PSA已广泛应用于工业氧气、氮气以及氢气的生产和净化。20世纪60年代，市场上就引进了PSA技术，如今PSA已广泛应用于工业氧气、氮气以及氢气的生产和净化。
+            </p>
+            <p style="text-indent: 2em;">以氢气为例，首先含有杂质的进气会通过泵吸入容器，容器中装有吸附材料；进气中的杂质如二氧化碳会被吸附剂吸附，剩下氢气在容器中；容器中的压力下降，释放吸附材料中的杂质；成品氢气中的一小部分会用于推动废气至排气口，使容器处于净化待工状态。
+            </p>
+            <div style="text-align:center;">
+              <img src="./image/gas11-1.jpg" style="width: 80%;">
+            </div>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
