--- a/gas9.html
+++ b/gas9.html
@@ -82,32 +82,53 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./gas.html">气体行业</a></div>
+        </li> 
+		    <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./gas9.html">烟气脱硫脱硝</a></div>
         </li> 
         <li>
-            <a href="./food1.html">蔗糖脱色</a>
+          <a href="./gas1.html">果蔬储存</a>
         </li>       
         <li>
-            <a href="./food2.html">淀粉糖的脱色</a>
-        </li>   
-        <li>
-            <a href="./food3.html">食用油中脱除PAH</a>
-        </li>       
-        <li>
-            <a href="./food4.html">果汁的纯化</a>
+          <a href="./gas2.html">油气回收</a>
         </li>  
         <li>
-            <a href="./food5.html">酒类的除杂</a>
+          <a href="./gas3.html">溶剂回收</a>
         </li>       
         <li>
-            <a href="./food6.html">乳酸，乳糖的脱色</a>
+          <a href="./gas4.html">VOC尾气脱除</a>
         </li>  
         <li>
-            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
+          <a href="./gas5.html">啤酒发酵中二氧化碳的净化</a>
         </li>       
         <li>
-            <a href="./food8.html">植物炭黑</a>
-        </li>  		
+          <a href="./gas6.html">香烟过滤嘴中的气体净化</a>
+        </li>  
+        <li>
+          <a href="./gas7.html">天然气脱汞</a>
+        </li>       
+        <li>
+          <a href="./gas8.html">沼气脱H2S及硅氧烷</a>
+        </li>  
+        <li>
+          <a href="./gas9.html">烟气脱硫脱硝</a>
+        </li>       
+        <li>
+          <a href="./gas10.html">垃圾焚烧尾气中脱除二噁英</a>
+        </li>  
+        <li>
+          <a href="./gas11.html">PSA</a>
+        </li>       
+        <li>
+          <a href="./gas12.html">家用空气净化</a>
+        </li>   	
+        <li>
+          <a href="./gas13.html">汽车碳罐</a>
+        </li>       
+        <li>
+          <a href="./gas14.html">防毒面具及口罩</a>
+        </li>  	
       </ul> 
     </div>  
 
@@ -117,73 +138,23 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 食品行业
+            当前位置:首页 >> 应用导航 >> 气体行业
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在食品行业的应用 :</strong>
-            <br>
-            <ul class="productapp">
-              <li>
-                <a href="./food1.html" >
-                  <img src="./image/food1.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food1.html">蔗糖脱色</a>
-              </li>
-              <li>
-                <a href="./food2.html" >
-                  <img src="./image/food2.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food2.html">淀粉糖的脱色</a>
-              </li>
-			  <li>
-                <a href="./food3.html" >
-                  <img src="./image/food3.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food3.html">食用油中脱除PAH</a>
-              </li>
-			  <li>
-                <a href="./food4.html" >
-                  <img src="./image/food4.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food4.html">果汁的纯化</a>
-              </li>
-			  <li>
-                <a href="./food5.html" >
-                  <img src="./image/food5.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food5.html">酒类的除杂</a>
-              </li>
-			  <li>
-                <a href="./food6.html" >
-                  <img src="./image/food6.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food6.html">乳酸，乳糖的脱色</a>
-              </li>
-			        <li>
-                <a href="./food7.html" >
-                  <img src="./image/food7.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food7.html">咖啡或茶中脱除咖啡因</a>
-              </li>
-			        <li>
-                <a href="./food8.html" >
-                  <img src="./image/food8.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food8.html">植物炭黑</a>
-              </li>
-            </ul>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">烟气脱硫脱硝 Flue gas purification</h2> 
+            <div style="text-align:center;">
+              <img src="./image/gas9-0.jpg" style="width: 60%;">
+            </div>
+            <p style="text-indent: 2em;">我国大部分火电厂面临着加强控制SO2 和NOX排放问题。目前限制推广脱硫脱氮技术的主要因素是初投资大、运行费用高、治污产物利用难、存在一定程度的二次污染。活性炭吸附法脱硫脱氮技术具有能够实现治污产物资源化利用,脱硫脱氮效率高等优点，被认为是一种有发展前景的脱硫脱氮技术。 
+            </p>
+            <p style="text-indent: 2em;">活性炭材料本身具有非极性、疏水性、较高的化学稳定性和热稳定性，可进行活化和改进性，加上它的催化能力、负载性能和还原性能以及独特的孔隙结构和表面化学特性，这就决定了活性炭作为一种脱硫脱硝剂具有非常好的先天条件；在各种烟气治理方法中,活性炭吸附法是唯一一种能脱除烟气中每一种杂质的方法，其中包括SO2、氮氧化物、烟尘粒子、汞、二噁英、呋喃、重金属、挥发分有机物及其他微量元素。
+            </p>   
+            <div style="text-align:center;">
+              <img src="./image/gas9-1.jpg" style="width: 80%;">
+            </div>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
