--- a/jobs.html
+++ b/jobs.html
@@ -79,13 +79,12 @@
       <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
           <div style="font-size:14px; color:#fff;  font-weight:bold;">关于飞肯新材</div>
       </li>
+      <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+        <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./jobs.html"><span>招才纳贤</span></a></div>
+      </li>
       <li>
           <a href="./aboutus.html"><span>公司简介</span></a>
       </li>      
-            
-      <li>
-          <a href="./jobs.html"><span>招才纳贤</span></a>
-      </li>  
             
       <li>
           <a href="./feedback.html"><span>在线留言</span></a>
