--- a/water3.html
+++ b/water3.html
@@ -82,32 +82,17 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./water.html">水行业</a></div>
+        </li> 
+		    <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./water3.html">冷凝水处理</a></div>
         </li> 
         <li>
-            <a href="./food1.html">蔗糖脱色</a>
+          <a href="./water1.html">饮用水</a>
         </li>       
         <li>
-            <a href="./food2.html">淀粉糖的脱色</a>
-        </li>   
-        <li>
-            <a href="./food3.html">食用油中脱除PAH</a>
-        </li>       
-        <li>
-            <a href="./food4.html">果汁的纯化</a>
+          <a href="./water2.html">污水处理</a>
         </li>  
-        <li>
-            <a href="./food5.html">酒类的除杂</a>
-        </li>       
-        <li>
-            <a href="./food6.html">乳酸，乳糖的脱色</a>
-        </li>  
-        <li>
-            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
-        </li>       
-        <li>
-            <a href="./food8.html">植物炭黑</a>
-        </li>  		
       </ul> 
     </div>  
 
@@ -117,73 +102,23 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 食品行业
+            当前位置:首页 >> 应用导航 >> 水行业
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在食品行业的应用 :</strong>
-            <br>
-            <ul class="productapp">
-              <li>
-                <a href="./food1.html" >
-                  <img src="./image/food1.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food1.html">蔗糖脱色</a>
-              </li>
-              <li>
-                <a href="./food2.html" >
-                  <img src="./image/food2.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food2.html">淀粉糖的脱色</a>
-              </li>
-			  <li>
-                <a href="./food3.html" >
-                  <img src="./image/food3.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food3.html">食用油中脱除PAH</a>
-              </li>
-			  <li>
-                <a href="./food4.html" >
-                  <img src="./image/food4.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food4.html">果汁的纯化</a>
-              </li>
-			  <li>
-                <a href="./food5.html" >
-                  <img src="./image/food5.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food5.html">酒类的除杂</a>
-              </li>
-			  <li>
-                <a href="./food6.html" >
-                  <img src="./image/food6.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food6.html">乳酸，乳糖的脱色</a>
-              </li>
-			        <li>
-                <a href="./food7.html" >
-                  <img src="./image/food7.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food7.html">咖啡或茶中脱除咖啡因</a>
-              </li>
-			        <li>
-                <a href="./food8.html" >
-                  <img src="./image/food8.jpg"/>
-                </a>
-                <br>
-                <a class="atext" href="./food8.html">植物炭黑</a>
-              </li>
-            </ul>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">c.	冷凝水处理 Condensate Polishing</h2> 
+            <div style="text-align:center;">
+              <img src="./image/water3-0.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">冷凝水循环系统是指冷凝水换热并经降温，再循环使用的给水系统。冷水流过需要降温的生产设备（常称换热设备，如换热器、冷凝器、反应器）后，温度上升，使升温冷水流过冷却设备则水温回降，可用泵送回生产设备再次使用，水的用量大大降低，常可节约95%以上。冷凝水占工业用水量的70%左右，因此，冷凝水循环系统起了节约大量工业用水的作用。
+            </p>
+            <p style="text-indent: 2em;">冷凝水在循环过程中，会有管道的腐蚀，同时换热设备中一些油污也会有泄露，常常会在冷凝水中引入Fe离子及有机杂质，对热交换的效率会产生不利影响。因此在冷凝水的循环中需对水进行净化防腐，活性炭因其孔径分布的特征，对有机小分子有比较好的吸附效果，常用于冷凝水的有机小分子去除。
+            </p>        
+            <div style="text-align:center;">
+              <img src="./image/water3-1.jpg" style="width: 80%;">
+            </div>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
